[project]
name = "ads-scam-detector-for-law-enforcement"
version = "0.1.0"
description = "A comprehensive web application designed to help law enforcement agencies detect and track potential scam advertisements on social media platforms. The system uses AI-powered analysis to identify scam patterns and provides tools for efficient reporting to authorities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
]
